Side Menu added

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main_style.css">
+    <title></LI>ist</title>
+</head>
+<body>
+    <div id="NavBar">
+        <img id="NavBar_SideMenuIcon" src="Side menu icon.png" alt="">
+        <span id="NavBar_Logo"></span>
+        <div id="NavBar_NewTaskButton">New Task</div>
+    </div>
+    <ul class="Unfinished_Tasks">
+        <li><input type="checkbox" name="" id="">Ano</li>
+        <li><input type="checkbox" name="" id="">No</li>
+    </ul>
 
+
+    <script src="script.js"></script>
+</body>
+</html>
