Tasks addition function

--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
         <span id="NavBar_Logo"></span>
         <div id="NavBar_NewTaskButton">New Task</div>
     </div>
-    <ul class="Unfinished_Tasks">
-        <li><input type="checkbox" name="" id="">Ano</li>
-        <li><input type="checkbox" name="" id="">No</li>
-    </ul>
 
+    <ul class="Unfinished_Tasks"></ul>
 
     <script src="script.js"></script>
     <script src="SideMenu_Script.js"></script>
