--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main_style.css">
+    <link rel="stylesheet" href="main_styleComputer.css">
     <title></LI>ist</title>
 </head>
 <body>
