Switching between unfinished and finished tasks first version

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title></LI>ist</title>
 </head>
 <body>
-    <div id="NavBar">
-        <img id="NavBar_SideMenuIcon" src="Side menu icon.png" alt="">
-        <span id="NavBar_Logo"></span>
-        <div id="NavBar_NewTaskButton">New Task</div>
+    <div id="MainContent_Container">
+        <div id="NavBar">
+            <img id="NavBar_SideMenuIcon" src="Side menu icon.png" alt="">
+            <span id="NavBar_Logo"></span>
+            <div id="NavBar_NewTaskButton">New Task</div>
+        </div>
     </div>
-
-    <ul class="Unfinished_Tasks"></ul>
 
     <script src="script.js"></script>
     <script src="SideMenu_Script.js"></script>
