--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <ul class="Header__NavBar--List">
                 <li class="Header__NavBar--List_Title"><img src="Images/InPageLogo.png"></img>LIst</li>
                 <li class="Header__NavBar--List_Help">Help</li>
+                <li hidden>Sign in</li>
+                <li hidden>Sign up</li>
             </ul>
         </nav>
         <div id="Header__MainDisplay">
@@ -31,8 +33,6 @@
             <p>Task lists play a pivotal role in our daily routines by serving as reliable guides that keep us on track and productive. In our fast-paced lives, they act as strategic tools that help us prioritize tasks, allocate time wisely, and maintain a clear focus on our objectives. By compiling tasks in a list format, we not only organize our workload but also gain a comprehensive view of what needs to be accomplished within a given timeframe.</p>
             <p>One of the greatest advantages of using task lists is their ability to reduce overwhelm. Breaking down complex projects or busy schedules into manageable, bite-sized tasks makes daunting challenges seem more approachable. This segmentation allows us to tackle tasks one at a time, steadily moving towards larger goals without feeling scattered or stressed.</p>
             <p>Moreover, task lists enhance accountability. When we write down our commitments, we create a tangible record of our intentions. This helps us stay accountable to ourselves and others, ensuring that promises are kept and deadlines are met. Checking off completed tasks provides a sense of achievement and progress, reinforcing our motivation to continue pushing forward.</p>
-            <p>Additionally, task lists foster efficiency and productivity by minimizing distractions. They serve as reminders of what needs our immediate attention, preventing important tasks from slipping through the cracks amidst the chaos of everyday life. This structured approach not only saves time but also allows for better utilization of resources and energy.</p>
-            <p>In essence, task lists are indispensable tools that empower us to manage our time effectively, maintain clarity amidst complexity, and achieve our objectives with purpose. Whether used digitally or on paper, they serve as personal assistants that keep us organized, motivated, and on the path to success. By harnessing the power of task lists, we can navigate our responsibilities with confidence and stride towards our aspirations with clarity and determination.</p>
         </div>
     </section>
 </body>
