Help page started

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>LIst</title>
 </head>
 <body>
-    <header id="Header">
-        <nav id="Header__NavBar">
+    <header class="Header">
+        <nav class="Header__NavBar">
             <ul class="Header__NavBar--List">
                 <li class="Header__NavBar--List_Title"><img src="Images/InPageLogo.png"></img>LIst</li>
                 <li class="Header__NavBar--List_Help">Help</li>
@@ -17,7 +17,7 @@
                 <li hidden>Sign up</li>
             </ul>
         </nav>
-        <div id="Header__MainDisplay">
+        <div class="Header__MainDisplay mainPage">
             <div id="Header__MainDisplay--Container">
                 <h1>Let's start!</h1>
                 <ul id="Header__MainDisplay--Container_Buttons">
@@ -35,5 +35,7 @@
             <p>Moreover, task lists enhance accountability. When we write down our commitments, we create a tangible record of our intentions. This helps us stay accountable to ourselves and others, ensuring that promises are kept and deadlines are met. Checking off completed tasks provides a sense of achievement and progress, reinforcing our motivation to continue pushing forward.</p>
         </div>
     </section>
+
+    <script src="Scripts/index.js"></script>
 </body>
 </html>
