Help page styling started

--- a/Sub-Pages/help.html
+++ b/Sub-Pages/help.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styling/mainPage.css">
+    <link rel="stylesheet" href="../styling/helpPage.css">
     <link rel="icon" type="image/x-icon" href="../Images/Tab Logo.png">
     <title>LIst - Help</title>
 </head>
@@ -18,9 +19,24 @@
             </ul>
         </nav>
         <div class="Header__MainDisplay">
-            <p>Dick</p>
+            <div id="HelpHeader__MainDisplay--Container">
+                <h1>Need help?</h1>
+                <h2>Here's a quick guide...</h2>
+            </div>
         </div>
     </header>
+    <section id="Help__MainBodySection">
+        <p>First of all, you need to log in or create an account.</p>
+        <img src="" alt="dsada">
+        <p>Once loged in you'll see your existing tasks in the main page if you have any. You can also see them in your profile.</p>
+        <img src="" alt="dasda">
+        <p>In your profile you'll see some profile data along with your current tasks and a few stadistics.</p>
+        <img src="" alt="dsada">
+        <p>In your profile you have a section where you can see your accomplished tasks.</p>
+        <img src="" alt="dadsa">
+        <p>To add a new task you just have to click in the middle button in the navegation bar that says "Add new task"</p>
+        <img src="" alt="dsdsa">
+    </section>
 
     <script src="../Scripts/index.js"></script>
 </body>
