--- a/Sub-Pages/help.html
+++ b/Sub-Pages/help.html
@@ -26,16 +26,18 @@
         </div>
     </header>
     <section id="Help__MainBodySection">
-        <p>First of all, you need to log in or create an account.</p>
-        <img src="" alt="dsada">
-        <p>Once loged in you'll see your existing tasks in the main page if you have any. You can also see them in your profile.</p>
-        <img src="" alt="dasda">
-        <p>In your profile you'll see some profile data along with your current tasks and a few stadistics.</p>
-        <img src="" alt="dsada">
-        <p>In your profile you have a section where you can see your accomplished tasks.</p>
-        <img src="" alt="dadsa">
-        <p>To add a new task you just have to click in the middle button in the navegation bar that says "Add new task"</p>
-        <img src="" alt="dsdsa">
+        <div id="Help__MainBodySection--Container">
+            <p>First of all, you need to log in or create an account.</p>
+            <img src="" alt="dsada">
+            <p>Once loged in you'll see your existing tasks in the main page if you have any. You can also see them in your profile.</p>
+            <img src="" alt="dasda">
+            <p>In your profile you'll see some profile data along with your current tasks and a few stadistics.</p>
+            <img src="" alt="dsada">
+            <p>In your profile you have a section where you can see your accomplished tasks.</p>
+            <img src="" alt="dadsa">
+            <p>To add a new task you just have to click in the middle button in the navegation bar that says "Add new task"</p>
+            <img src="" alt="dsdsa">
+        </div>
     </section>
 
     <script src="../Scripts/index.js"></script>
