Help page responsiveness improved and Sign in and Sign up pages created

--- a/Sub-Pages/help.html
+++ b/Sub-Pages/help.html
@@ -27,16 +27,16 @@
     </header>
     <section id="Help__MainBodySection">
         <div id="Help__MainBodySection--Container">
-            <p>First of all, you need to log in or create an account.</p>
-            <img src="" alt="dsada">
-            <p>Once loged in you'll see your existing tasks in the main page if you have any. You can also see them in your profile.</p>
-            <img src="" alt="dasda">
-            <p>In your profile you'll see some profile data along with your current tasks and a few stadistics.</p>
-            <img src="" alt="dsada">
-            <p>In your profile you have a section where you can see your accomplished tasks.</p>
-            <img src="" alt="dadsa">
-            <p>To add a new task you just have to click in the middle button in the navegation bar that says "Add new task"</p>
-            <img src="" alt="dsdsa">
+            <h2>First of all, you need to log in or create an account.</h2>
+            <img src="" alt="">
+            <h2>Once loged in you'll see your existing tasks in the main page if you have any. You can also see them in your profile.</h2>
+            <img src="" alt="">
+            <h2>In your profile you'll see some profile data along with your current tasks and a few stadistics.</h2>
+            <img src="" alt="">
+            <h2>In your profile you have a section where you can see your accomplished tasks.</h2>
+            <img src="" alt="">
+            <h2>To add a new task you just have to click in the middle button in the navegation bar that says "Add new task".</h2>
+            <img src="" alt="">
         </div>
     </section>
 
