Sign pages stylished

--- a/Sub-Pages/SignUp.html
+++ b/Sub-Pages/SignUp.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styling/mainPage.css">
+    <link rel="stylesheet" href="../styling/SignInPage.css">
     <link rel="icon" type="image/x-icon" href="../Images/Tab Logo.png">
     <title>LIst - Sign up</title>
 </head>
 <body>
     <header class="Header">
         <div class="Header__MainDisplay">
-            <div id="SignUpHeader__MainDisplay--Container">
+            <div class="SignHeader__MainDisplay--Container">
                 <h1>Sign up</h1>
-                <form action="">
+                <form action="" class="SignHeader__MainDisplay--Container_Form">
                     <input type="text" name="" id="">
                     <input type="email" name="" id="">
                     <input type="password">
