Sign pages stylished

--- a/Sub-Pages/SignUp.html
+++ b/Sub-Pages/SignUp.html
@@ -14,9 +14,9 @@
             <div class="SignHeader__MainDisplay--Container">
                 <h1>Sign up</h1>
                 <form action="" class="SignHeader__MainDisplay--Container_Form">
-                    <input type="text" name="" id="">
-                    <input type="email" name="" id="">
-                    <input type="password">
+                    <input type="text" name="" id="" placeholder="Username">
+                    <input type="email" name="" id="" placeholder="Email">
+                    <input type="password" placeholder="Password">
                     <input type="submit" value="Sign up">
                     <p>Have an account? Sign in!</p>
                     <input type="button" value="Sign in">
