--- a/Sub-Pages/SignIn.html
+++ b/Sub-Pages/SignIn.html
@@ -14,8 +14,8 @@
             <div class="SignHeader__MainDisplay--Container">
                 <h1>Sign in</h1>
                 <form action="" class="SignHeader__MainDisplay--Container_Form">
-                    <input type="text" name="" id="">
-                    <input type="password">
+                    <input type="text" name="" id="" placeholder="Username">
+                    <input type="password" placeholder="Password">
                     <input type="submit" value="Sign in">
                     <p>Don't have an account? Create one!</p>
                     <input type="button" value="Sign up">
