Profile page added

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             </ul>
         </nav>
         <div class="Header__MainDisplay mainPage">
-            <div id="Header__MainDisplay--Container">
+            <div class="Header__MainDisplay--Container mainPage">
                 <h1>Let's start!</h1>
-                <ul id="Header__MainDisplay--Container_Buttons">
+                <ul class="Header__MainDisplay--Container_Buttons mainPage">
                     <li>Sign in</li>
                     <li>Sign up</li>
                 </ul>
