--- a/Sub-Pages/help.html
+++ b/Sub-Pages/help.html
@@ -14,8 +14,8 @@
             <ul class="Header__NavBar--List">
                 <li class="Header__NavBar--List_Title notMainPage"><img src="../Images/InPageLogo.png"></img>LIst</li>
                 <li class="Header__NavBar--List_Help"></li>
-                <li hidden>Sign in</li>
-                <li hidden>Sign up</li>
+                <li class="Header__NavBar--List_SignIn" hidden>Sign in</li>
+                <li class="Header__NavBar--List_SignUp" hidden>Sign up</li>
             </ul>
         </nav>
         <div class="Header__MainDisplay">
@@ -40,6 +40,6 @@
         </div>
     </section>
 
-    <script src="../Scripts/index.js"></script>
+    <script src="../Scripts/navbar.js"></script>
 </body>
 </html>
