--- a/Sub-Pages/profile.html
+++ b/Sub-Pages/profile.html
@@ -14,8 +14,6 @@
             <ul class="Header__NavBar--List">
                 <li class="Header__NavBar--List_Title notMainPage"><img src="../Images/InPageLogo.png"></img>LIst</li>
                 <li class="Header__NavBar--List_Help"></li>
-                <li hidden>Sign in</li>
-                <li hidden>Sign up</li>
             </ul>
         </nav>
         <div class="Header__MainDisplay profile">
@@ -38,5 +36,7 @@
             </ul>
         </div>
     </section>
+
+    <script src="../Scripts/navbar.js"></script>
 </body>
 </html>
