--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <ul class="Header__NavBar--List">
                 <li class="Header__NavBar--List_Title"><img src="Images/InPageLogo.png"></img>LIst</li>
                 <li class="Header__NavBar--List_Help">Help</li>
-                <li hidden>Sign in</li>
-                <li hidden>Sign up</li>
+                <li class="Header__NavBar--List_SignIn mainPage" hidden>Sign in</li>
+                <li class="Header__NavBar--List_SignUp mainPage" hidden>Sign up</li>
             </ul>
         </nav>
         <div class="Header__MainDisplay mainPage">
@@ -37,5 +37,6 @@
     </section>
 
     <script src="Scripts/index.js"></script>
+    <script src="Scripts/navbar.js"></script>
 </body>
 </html>
