--- a/Sub-Pages/SignIn.html
+++ b/Sub-Pages/SignIn.html
@@ -25,5 +25,6 @@
     </header>
 
     <script src="../Scripts/index.js"></script>
+    <script src="../Scripts/sign.js"></script>
 </body>
 </html>
