--- a/Sub-Pages/SignUp.html
+++ b/Sub-Pages/SignUp.html
@@ -26,5 +26,6 @@
     </header>
 
     <script src="../Scripts/index.js"></script>
+    <script src="../Scripts/sign.js"></script>
 </body>
 </html>
