--- a/Sub-Pages/SignIn.html
+++ b/Sub-Pages/SignIn.html
@@ -14,7 +14,7 @@
             <div class="SignHeader__MainDisplay--Container">
                 <h1>Sign in</h1>
                 <form action="" class="SignHeader__MainDisplay--Container_Form">
-                    <input type="text" name="" id="" placeholder="Username">
+                    <input type="text" name="" id="" placeholder="Username or email">
                     <input type="password" placeholder="Password">
                     <input type="submit" value="Sign in">
                     <p>Don't have an account? Create one!</p>
@@ -26,5 +26,6 @@
 
     <script src="../Scripts/index.js"></script>
     <script src="../Scripts/sign.js"></script>
+    <script src="../Scripts/navbar.js"></script>
 </body>
 </html>
