--- a/Sub-Pages/SignUp.html
+++ b/Sub-Pages/SignUp.html
@@ -27,5 +27,6 @@
 
     <script src="../Scripts/index.js"></script>
     <script src="../Scripts/sign.js"></script>
+    <script src="../Scripts/navbar.js"></script>
 </body>
 </html>
