--- a/Sub-Pages/help.html
+++ b/Sub-Pages/help.html
@@ -16,6 +16,7 @@
                 <li class="Header__NavBar--List_Help"></li>
                 <li class="Header__NavBar--List_SignIn" hidden>Sign in</li>
                 <li class="Header__NavBar--List_SignUp" hidden>Sign up</li>
+                <li class="Header__NavBar--List_LogOut">Log out</li>
             </ul>
         </nav>
         <div class="Header__MainDisplay">
