--- a/Sub-Pages/profile.html
+++ b/Sub-Pages/profile.html
@@ -14,6 +14,7 @@
             <ul class="Header__NavBar--List">
                 <li class="Header__NavBar--List_Title notMainPage"><img src="../Images/InPageLogo.png"></img>LIst</li>
                 <li class="Header__NavBar--List_Help"></li>
+                <li class="Header__NavBar--List_LogOut">Log out</li>
             </ul>
         </nav>
         <div class="Header__MainDisplay profile">
