--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li class="Header__NavBar--List_Help">Help</li>
                 <li class="Header__NavBar--List_SignIn mainPage" hidden>Sign in</li>
                 <li class="Header__NavBar--List_SignUp mainPage" hidden>Sign up</li>
+                <li class="Header__NavBar--List_LogOut">Log out</li>
             </ul>
         </nav>
         <div class="Header__MainDisplay mainPage">
@@ -38,5 +39,6 @@
 
     <script src="Scripts/index.js"></script>
     <script src="Scripts/navbar.js"></script>
+    <script src="Scripts/sign.js"></script>
 </body>
 </html>
