Change in the button redirection function giving

--- a/Sub-Pages/help.html
+++ b/Sub-Pages/help.html
@@ -12,10 +12,11 @@
     <header class="Header">
         <nav class="Header__NavBar">
             <ul class="Header__NavBar--List">
-                <li class="Header__NavBar--List_Title notMainPage"><img src="../Images/InPageLogo.png"></img>LIst</li>
+                <li class="Header__NavBar--List_Title"><img src="../Images/InPageLogo.png"></img>LIst</li>
                 <li class="Header__NavBar--List_Help"></li>
                 <li class="Header__NavBar--List_SignIn" hidden>Sign in</li>
                 <li class="Header__NavBar--List_SignUp" hidden>Sign up</li>
+                <li class="Header__NavBar--List_Profile">Profile</li>
                 <li class="Header__NavBar--List_LogOut">Log out</li>
             </ul>
         </nav>
