--- a/Sub-Pages/profile.html
+++ b/Sub-Pages/profile.html
@@ -12,8 +12,8 @@
     <header class="Header profile">
         <nav class="Header__NavBar">
             <ul class="Header__NavBar--List">
-                <li class="Header__NavBar--List_Title notMainPage"><img src="../Images/InPageLogo.png"></img>LIst</li>
-                <li class="Header__NavBar--List_Help"></li>
+                <li class="Header__NavBar--List_Title"><img src="../Images/InPageLogo.png"></img>LIst</li>
+                <li class="Header__NavBar--List_Help">Help</li>
                 <li class="Header__NavBar--List_LogOut">Log out</li>
             </ul>
         </nav>
@@ -31,13 +31,12 @@
     <section id="Profile__MainBodySection">
         <div id="Profile__MainBodySection--Container">
             <ul id="Profile__MainBodySection--Container_TaskList">
-                <li><span></span><p>Hello</p></li>
-                <li><span></span><p>World</p></li>
-                <li><span></span><p>!</p></li>
             </ul>
         </div>
     </section>
 
     <script src="../Scripts/navbar.js"></script>
+    <script src="../Scripts/sign.js"></script>
+    <script src="../Scripts/profile.js"></script>
 </body>
 </html>
