--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <header class="Header">
         <nav class="Header__NavBar">
             <ul class="Header__NavBar--List">
-                <li class="Header__NavBar--List_Title"><img src="Images/InPageLogo.png"></img>LIst</li>
-                <li class="Header__NavBar--List_Help">Help</li>
+                <li class="Header__NavBar--List_Title mainPage"><img src="Images/InPageLogo.png"></img>LIst</li>
+                <li class="Header__NavBar--List_TaskAddition mainPage" hidden>Add task</li>
+                <li class="Header__NavBar--List_Help mainPage">Help</li>
                 <li class="Header__NavBar--List_SignIn mainPage" hidden>Sign in</li>
                 <li class="Header__NavBar--List_SignUp mainPage" hidden>Sign up</li>
-                <li class="Header__NavBar--List_LogOut">Log out</li>
+                <li class="Header__NavBar--List_Profile mainPage">Profile</li>
+                <li class="Header__NavBar--List_LogOut mainPage">Log out</li>
             </ul>
         </nav>
         <div class="Header__MainDisplay mainPage">
