Task addition working

--- a/Sub-Pages/help.html
+++ b/Sub-Pages/help.html
@@ -13,6 +13,7 @@
         <nav class="Header__NavBar">
             <ul class="Header__NavBar--List">
                 <li class="Header__NavBar--List_Title"><img src="../Images/InPageLogo.png"></img>LIst</li>
+                <li class="Header__NavBar--List_TaskAddition" hidden>Add task</li>
                 <li class="Header__NavBar--List_Help"></li>
                 <li class="Header__NavBar--List_SignIn" hidden>Sign in</li>
                 <li class="Header__NavBar--List_SignUp" hidden>Sign up</li>
