--- a/Sub-Pages/profile.html
+++ b/Sub-Pages/profile.html
@@ -13,6 +13,7 @@
         <nav class="Header__NavBar">
             <ul class="Header__NavBar--List">
                 <li class="Header__NavBar--List_Title"><img src="../Images/InPageLogo.png"></img>LIst</li>
+                <li class="Header__NavBar--List_TaskAddition" hidden>Add task</li>
                 <li class="Header__NavBar--List_Help">Help</li>
                 <li class="Header__NavBar--List_LogOut">Log out</li>
             </ul>
