Task checking added

--- a/Sub-Pages/profile.html
+++ b/Sub-Pages/profile.html
@@ -22,7 +22,7 @@
             <div class="Header__MainDisplay--Container profile">
                 <h1>User</h1>
                 <ul class="Header__MainDisplay--Container_Buttons profile">
-                    <li class="profileButtonSelected">Unfinished</li>
+                    <li>Unfinished</li>
                     <li>Finished</li>
                     <li>Stadistics</li>
                 </ul>
